App is now fully functional, I think. Just needs style
Signed-off-by: Cristiano Betta <cbetta@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+	
+
+	<% for name in [:notice, :warning, :message]  %>
+	  <% if flash[name] %>
+	    <div id="<%= name %>"><%= flash[name] %></div>
+	  <% end %>
+	<% end %>
 
 <%= yield %>
 
