--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gwphotos</title>
+  <title>GoFlickr - The Gowalla to Flickr photos exporter</title>
   <%= stylesheet_link_tag :all %>
+	<%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic" %>
+	<%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold" %>
+	
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-	
-
+	<h1>GoFlickr</h1>
+	<h2>The Gowalla to Flickr photos exporter</h2>
+  
 	<% for name in [:notice, :warning, :message]  %>
 	  <% if flash[name] %>
-	    <div id="<%= name %>"><%= flash[name] %></div>
+	    <div class='flash' id="<%= name %>"><%= flash[name] %></div>
 	  <% end %>
 	<% end %>
 
