--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -19,10 +19,12 @@
 <% if logged_in? %>
 	<p class='righted'>
 		<%= link_to "Made by Cristiano Betta", "http://cristianobetta.com" %> |
+		<%= link_to "@cbetta", "http://twitter.com/cbetta" %> |
 		<%= link_to "Log out", logout_path %>
 	</p>
 <% else %>
 	<p class='righted'>
-		<%= link_to "Made by Cristiano Betta", "http://cristianobetta.com" %>
+		<%= link_to "Made by Cristiano Betta", "http://cristianobetta.com" %> |
+		<%= link_to "@cbetta", "http://twitter.com/cbetta" %>
 	</p>
 <% end %>
