Changed the footer once more
Signed-off-by: Cristiano Betta <cbetta@gmail.com>

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -15,8 +15,8 @@
 	<h3>That's it!</h3>
 	<p>You are now all set up. If this is your first time connecting, we have started to directly import your photos now! Any other photos you take in the future will be uploaded every hour.
 <% end %>
-
-<p class='righted'>
+<br/>
+<p class='centered'>
 	<%= link_to "Made by Cristiano Betta", "http://cristianobetta.com" %> |
 	<%= link_to "@cbetta", "http://twitter.com/cbetta" %> |
 	<%= link_to "Source", "https://github.com/cbetta/GoFlickr" %>
