--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -4,23 +4,29 @@
 	<p class='centered'><%= link_to image_tag("button-gowalla_connect-156ool.png"), "/auth/gowalla" %></p>
 	<h3>Step 2</h3>
 	<p class='centered disabled'>Connect with Flickr</p>
-<% elsif current_user.flickr.nil?  %>
+<% elsif current_user.fully_authorised == false %>
 	<p>GoFlickr is a simple tool for <strong>automatically</strong> having your photos exported from <strong>Gowalla</strong> to <strong>Flickr</strong>. <strong>Once an hour</strong> we will check your account for new photos and upload them for you to your own Flickr account.</p>
 	<h3>Step 1 complete</h3>
 	<p class='centered'>You are connected with Gowalla</p>
 	<h3>Step 2</h3>
 	<p class='centered'><%= link_to image_tag("button-flickr.png"), "/auth/flickr" %></p>
+	<h3>or</h3>
+	<p class='centered'><%= link_to "Log out", logout_path, :class => 'button black' %></p>
 <% else %>
 	<p></p>
 	<h3>That's it!</h3>
-	<p>You are now all set up. If this is your first time connecting, we have started to directly import your photos now! Any other photos you take in the future will be uploaded every hour.
+	<p>You are now all set up. Any other photos you take in the future will be uploaded every hour.
+	<p class='centered'>
+		<% unless current_user.backlog_processed %>
+			<a href='/process_backlog' class='button orange'>Upload my existing photos (<%= gowalla.api.user_photos(gowalla.username).count %>)</a><br/><br/>
+		<% end %>
+		<%= link_to "Log out", logout_path, :class => 'button black' %>
+		<%= link_to "Stop auto-uploading", "/disable", :class=>'button white', :confirm => "Are you sure? This will prevent us from uploading any more photos to your Flickr account." %>
+	</p>
 <% end %>
 <br/>
 <p class='centered'>
 	<%= link_to "Made by Cristiano Betta", "http://cristianobetta.com" %> |
 	<%= link_to "@cbetta", "http://twitter.com/cbetta" %> |
 	<%= link_to "Source", "https://github.com/cbetta/GoFlickr" %>
-	<% if logged_in? %>
-	 | <%= link_to "Log out", logout_path %>
-	<% end%>
 </p>
